# Computation-Method

shared_test/: CMakeLists.txt  main.c
shared_test/include/: common.h
src/: CMakeLists.txt
src/IntegralTransform/: fft.c  fft.h
src/Interpolation/: LagrangeInterpolation.c
src/NonlinearEquationsIterative/: main.c
src/ODE/: main.c
src/include/: common.h
